--- a/templates/mainsite/index.html
+++ b/templates/mainsite/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,5 +9,6 @@
   </head>
   <body>
     <h1>Hello Mainsite</h1>
+    <img src="{% static 'images/coolcat.png' %}" alt="" />
   </body>
 </html>
