--- a/templates/emails/iniquiries.html
+++ b/templates/emails/iniquiries.html
@@ -1,15 +1,381 @@
-{% block subject %}
- 
-        Inqueries 
-    
-{% endblock subject %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Enquiry - Anchorsoft Academy</title>
+    <style type="text/css">
+      table {
+        border-spacing: 0;
+      }
+      td {
+        padding: 0;
+      }
+      p {
+        font-size: 17px;
+        margin: 0;
+      }
+      img {
+        border: 0;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+      }
 
+      @media screen and (max-width: 599.98px) {
+        .header-td {
+          flex-direction: column !important;
+          height: 130px !important;
+          padding-bottom: 30px !important;
+        }
 
-{% block html_body %}
+        .logo {
+          padding-top: 30px;
+        }
 
+        .header-td-align {
+          text-align: start !important;
+          padding-top: 25px !important;
+        }
+      }
+      @media screen and (max-width: 399.98px) {
+        .header-td {
+          flex-direction: column !important;
+          height: 130px !important;
+          padding-bottom: 30px !important;
+        }
 
-<b>Name:</b> <span>{{ fullname }}</span>
-<b>mobile:</b> <span> {{ mobile }}</span>
-<b>email:</b> <span> {{email}}</span>
-<b>message:</b> <span> {{message}}</span>
-{% endblock html_body %}
+        .logo {
+          padding-top: 30px;
+        }
+
+        .header-td-align {
+          text-align: start !important;
+          padding-top: 25px !important;
+        }
+      }
+    </style>
+
+    <!--[if (gte mso 9)|(IE)]>
+      <style type="text/css">
+        table {
+          border-collapse: collapse !important;
+        }
+      </style>
+    <![endif]-->
+  </head>
+  <body
+    style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
+  >
+    <!--[if (gte mso 9)|(IE)]>
+      <style type="text/css">
+        body {
+          background-color: #f0ffff !important;
+        }
+        body,
+        table,
+        td,
+        p,
+        a {
+          font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif !important;
+        }
+      </style>
+    <![endif]-->
+
+    <center
+      style="
+        width: 100%;
+        table-layout: fixed;
+        background-color: #f0ffff;
+        padding-bottom: 40px;
+      "
+    >
+      <div style="max-width: 600px; background-color: #244d68">
+        <div
+          style="
+            font-size: 0px;
+            color: #fafdfe;
+            line-height: 1px;
+            mso-line-height-rule: exactly;
+            display: none;
+            max-width: 0px;
+            max-height: 0px;
+            opacity: 0;
+            overflow: hidden;
+            mso-hide: all;
+          "
+        >
+          Enquiry - Anchorsoft Academy
+        </div>
+
+        <table
+          align="center"
+          style="
+            border-spacing: 0;
+            font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif !important;
+            background-color: #244d68;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            max-width: 600px;
+          "
+          role="presentation"
+        >
+          <tr>
+            <td
+              class="header-td"
+              style="
+                padding: 0 20px;
+                display: flex;
+                height: 100px;
+                background-color: #244d68;
+              "
+            >
+              <table
+                class="logo"
+                width="100%"
+                style="border-spacing: 0"
+                role="presentation"
+              >
+                <tr>
+                  <td style="padding: 0">
+                    <a href="">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                        alt=""
+                      />
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td class="header-td-align" style="text-align: right">
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                        alt=""
+                      />
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 15px">
+                    <p
+                      style="
+                        font-size: 28px;
+                        font-weight: 800;
+                        color: #004c54;
+                        margin: 0;
+                      "
+                    >
+                      Hello Bamidele,
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding-top: 10px; padding-bottom: 20px">
+                    <p
+                      style="
+                        font-size: 20px;
+                        font-weight: 600;
+                        color: #575656;
+                        margin: 0;
+                      "
+                    >
+                      We got your message, we will respond shortly, Thank you.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #004c54"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Name:</span>
+                      <span>Bamidele Johnson</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Email:</span>
+                      <span>bamidele@email.com</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Mobile:</span>
+                      <span>09016426778</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td
+              style="
+                padding: 0 20px;
+                padding-bottom: 60px;
+                background-color: white;
+              "
+            >
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Your Message</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 15px; border: 1px solid #404141">
+                    <p style="color: #404141">
+                      Lorem ipsum dolor sit amet consectetur. Adipiscing et
+                      imperdiet enim ut tellus aenean in consequat. At lacus
+                      adipiscing aliquam sagittis. Mi ipsum dictum at metus
+                      cras. Diam magna suspendisse leo lorem cras.
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 20px 0; background-color: #244d68">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td
+                    style="
+                      text-align: center;
+                      padding-bottom: 25px;
+                      background-color: #244d68;
+                    "
+                  >
+                    <a href="">
+                      <img src="./Group 77.png" alt="" />
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      text-align: center;
+                      padding: 0 70px;
+                      padding-bottom: 25px;
+                      background-color: #244d68;
+                    "
+                  >
+                    <p style="color: white">
+                      First floor, 2B Yinusa Adeniji street, opposite St. James
+                      church, Unity road, Off Toyin street, Ikeja, Lagos,
+                      Nigeria.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; background-color: #244d68">
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" style="margin-right: 5px">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                        alt=""
+                      />
+                    </a>
+                    <a href="">
+                      <img
+                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                        alt=""
+                      />
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </center>
+  </body>
+</html>
