--- a/templates/emails/short_quizzes.html
+++ b/templates/emails/short_quizzes.html
@@ -1,45 +1,336 @@
-{% block subject %}
- 
-        THANK YOU FOR TAKING THIS SHORT QUIZZES
-    
-{% endblock subject %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Anchorsoft Academy Inquiry</title>
+		<style type="text/css">
+			table {
+				border-spacing: 0;
+			}
+			td {
+				padding: 0;
+			}
+			p {
+				font-size: 17px;
+				margin: 0;
+			}
+			img {
+				border: 0;
+			}
+			a {
+				text-decoration: none;
+				color: white;
+			}
 
+			@media screen and (max-width: 599.98px) {
+				.header-td {
+					flex-direction: column !important;
+					height: 130px !important;
+					padding-bottom: 30px !important;
+				}
 
-{% block html_body %}
-Dear {{ fullname }},
+				.logo {
+					padding-top: 30px;
+				}
 
-    Here are the following details of the short quizzes and we will get back to you shortly
-   <div class="container">
-    <div class="wrapper">
-        <ul>
-            <li>
-                Name: {{fullname}}
-            </li>
-            <li>
-                Teritary: {{tartiary_education}}
-            </li>
-            <li>
-                Teritary Course: {{tartiary_studied}}
-            </li>
-            <li>
-                Secondary School: {{secondary_sch}}
-            </li>
-            <li>
-                Secondary Departments: {{secondary_studied}}
-            </li>
-            <li>
-                Interested Technologies: {{tech_interest}}
-            </li>
-            <li>
-                Something About You: {{more_about_you}}
-            </li>
-            <li>
-                Email: {{email}}
-            </li>
-            <li>
-                Phone: {{mobile}}
-            </li>
-        </ul>
-    </div>
-   </div>
-{% endblock html_body %}
+				.header-td-align {
+					text-align: start !important;
+					padding-top: 25px !important;
+				}
+			}
+			@media screen and (max-width: 399.98px) {
+				.header-td {
+					flex-direction: column !important;
+					height: 130px !important;
+					padding-bottom: 30px !important;
+				}
+
+				.logo {
+					padding-top: 30px;
+				}
+
+				.header-td-align {
+					text-align: start !important;
+					padding-top: 25px !important;
+				}
+			}
+		</style>
+
+		<!--[if (gte mso 9)|(IE)]>
+			<style type="text/css">
+				table {
+					border-collapse: collapse !important;
+				}
+			</style>
+		<![endif]-->
+	</head>
+	<body
+		style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
+	>
+		<!--[if (gte mso 9)|(IE)]>
+			<style type="text/css">
+				body {
+					background-color: #f0ffff !important;
+				}
+				body,
+				table,
+				td,
+				p,
+				a {
+					font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif !important;
+				}
+			</style>
+		<![endif]-->
+
+		<center
+			style="
+				width: 100%;
+				table-layout: fixed;
+				background-color: #f0ffff;
+				padding-bottom: 40px;
+			"
+		>
+			<div style="max-width: 600px; background-color: #244d68">
+				<div
+					style="
+						font-size: 0px;
+						color: #fafdfe;
+						line-height: 1px;
+						mso-line-height-rule: exactly;
+						display: none;
+						max-width: 0px;
+						max-height: 0px;
+						opacity: 0;
+						overflow: hidden;
+						mso-hide: all;
+					"
+				>
+					Anchorsoft Academy Short Quiz
+				</div>
+
+				<table
+					align="center"
+					style="
+						border-spacing: 0;
+						font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif !important;
+						background-color: #244d68;
+						margin: 0;
+						padding: 0;
+						width: 100%;
+						max-width: 600px;
+					"
+					role="presentation"
+				>
+					<tr>
+						<td
+							class="header-td"
+							style="
+								padding: 0 20px;
+								display: flex;
+								height: 100px;
+								background-color: #244d68;
+							"
+						>
+							<table
+								class="logo"
+								width="100%"
+								style="border-spacing: 0"
+								role="presentation"
+							>
+								<tr>
+									<td style="padding: 0">
+										<a href="">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+												alt=""
+											/>
+										</a>
+									</td>
+								</tr>
+							</table>
+							<table width="100%" style="border-spacing: 0" role="presentation">
+								<tr>
+									<td class="header-td-align" style="text-align: right">
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+												alt=""
+											/>
+										</a>
+										<a href="">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+												alt=""
+											/>
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td style="padding: 20px 0; background-color: #244d68">
+							<table width="100%" style="border-spacing: 0" role="presentation">
+								<tr>
+									<td style="text-align: center">
+										<p style="font-size: 20px; color: white; font-weight: 800">
+											ANCHORSOFT ACADEMY SHORT QUIZ
+										</p>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td
+							style="
+								padding-top: 20px;
+								padding-bottom: 20px;
+								padding-left: 20px;
+								padding-right: 20px;
+								background-color: white;
+							"
+						>
+							<table width="100%" style="border-spacing: 0" role="presentation">
+								<tr>
+									<td style="text-align: start; padding-bottom: 15px">
+										<p
+											style="font-size: 20px; color: #244d68; font-weight: 800"
+										>
+											Hello Bamidele,
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align: start; padding-bottom: 25px">
+										<p
+											style="font-size: 17px; color: #244d68; font-weight: 500"
+										>
+											We wanted to let you know that we have received your quiz
+											submission on
+											<span style="font-weight: 700">Jan 23, 2023.</span> We
+											appreciate your interest in our school and are committed
+											to helping you find the course that best suits your needs
+											and goals.
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align: start; padding-bottom: 25px">
+										<p
+											style="font-size: 17px; color: #244d68; font-weight: 500"
+										>
+											We will review your quiz answers and get back to you as
+											soon as possible with your recommended course. If you have
+											any questions or concerns, please do not hesitate to reach
+											out to us.
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align: start; padding-bottom: 25px">
+										<p
+											style="font-size: 17px; color: #244d68; font-weight: 500"
+										>
+											Thank you for choosing Anchorsoft Academy.
+										</p>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+
+					<tr>
+						<td style="padding: 20px 0; background-color: #244d68">
+							<table width="100%" style="border-spacing: 0" role="presentation">
+								<tr>
+									<td
+										style="
+											text-align: center;
+											padding-bottom: 25px;
+											background-color: #244d68;
+										"
+									>
+										<a href="">
+											<img src="./Group 77.png" alt="" />
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td
+										style="
+											text-align: center;
+											padding: 0 70px;
+											padding-bottom: 25px;
+											background-color: #244d68;
+										"
+									>
+										<p style="color: white">
+											First floor, 2B Yinusa Adeniji street, opposite St. James
+											church, Unity road, Off Toyin street, Ikeja, Lagos,
+											Nigeria.
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; background-color: #244d68">
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+												alt=""
+											/>
+										</a>
+										<a href="" style="margin-right: 5px">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+												alt=""
+											/>
+										</a>
+										<a href="">
+											<img
+												src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+												alt=""
+											/>
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</center>
+	</body>
+</html>
