--- a/templates/emails/kidscoding.html
+++ b/templates/emails/kidscoding.html
@@ -8,7 +8,7 @@
 {% block html_body %}
 
 
-    Here are the following details of the short quizzes and we will get back to you shortly
+    Here are the following details of the kids and we will get back to you shortly
    <div class="container">
     <div class="wrapper">
         <ul>
