issues rectify on emails to db and templates

--- a/templates/emails/interested_emails.html
+++ b/templates/emails/interested_emails.html
@@ -245,12 +245,12 @@ Interest in Fullstack Web Development
 											We wanted to let you know that we have received your
 											interest in our
 											<span style="font-weight: 700"
-												>Fullstack web development with python.</span
+												>{{course}}.</span
 											>
 											course. We appreciate your interest in our school and are
 											committed to providing you with high-quality education in
 											<span style="font-weight: 700"
-												>Fullstack web development with python.</span
+												>{{course}}.</span
 											>.
 										</p>
 									</td>
