--- a/templates/emails/short_quizzes.html
+++ b/templates/emails/short_quizzes.html
@@ -235,7 +235,7 @@ Anchorsoft Academy Short Quizzes
 										>
 											We wanted to let you know that we have received your quiz
 											submission on
-											<span style="font-weight: 700">Jan 23, 2023.</span> We
+											<span style="font-weight: 700"> {{today_date}}.</span> We
 											appreciate your interest in our school and are committed
 											to helping you find the course that best suits your needs
 											and goals.
