emails cleanup and coursedetails endpoint

--- a/templates/emails/iniquiries.html
+++ b/templates/emails/iniquiries.html
@@ -323,7 +323,10 @@ Enquiry - Anchorsoft Academy
                     "
                   >
                     <a href="">
-                      <img src="./Group 77.png" alt="" />
+                      <img
+												src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+												alt=""
+											/>
                     </a>
                   </td>
                 </tr>
