--- a/templates/emails/short_quizzes.html
+++ b/templates/emails/short_quizzes.html
@@ -1,5 +1,5 @@
 {% block subject %} 
-Anchorsoft Academy Short Quizzes   
+Short Quizzes - Anchorsoft Academy   
 {% endblock subject %}
 
 {% block html_body %}
@@ -254,6 +254,268 @@ Anchorsoft Academy Short Quizzes
 										</p>
 									</td>
 								</tr>
+
+
+									<!-- name -->
+									<tr>
+										<td
+										  style="
+											padding: 0;
+											padding-bottom: 20px;
+											background-color: white;
+										  "
+										>
+										  <table
+											width="100%"
+											style="border-spacing: 0"
+											role="presentation"
+										  >
+											<tr>
+											  <td style=" padding-bottom:10px">
+												<p style="color: #404141">
+												  <span style="font-weight: 700">Name:</span>
+												  <span>{{ fullname }}</span>
+												</p>
+											  </td>
+											</tr>
+											<tr>
+											  <td style="height: 1px; background-color: #404141"></td>
+											</tr>
+										  </table>
+										</td>
+									  </tr>
+									  <!-- EMAIL -->
+									  <tr>
+										<td
+										  style="
+											padding: 0;
+											padding-bottom: 20px;
+											background-color: white;
+										  "
+										>
+										  <table
+											width="100%"
+											style="border-spacing: 0"
+											role="presentation"
+										  >
+											<tr>
+											  <td style=" padding-bottom: 10px">
+												<p style="color: #404141">
+												  <span style="font-weight: 700">Email:</span>
+												  <span>{{ email }}</span>
+												</p>
+											  </td>
+											</tr>
+											<tr>
+											  <td style="height: 1px; background-color: #404141"></td>
+											</tr>
+										  </table>
+										</td>
+									  </tr>
+					  
+									  <!-- MOBILE -->
+									  <tr>
+										  <td
+											style="
+											  padding: 0;
+											  padding-bottom: 20px;
+											  background-color: white;
+											"
+										  >
+											<table
+											  width="100%"
+											  style="border-spacing: 0"
+											  role="presentation"
+											>
+											  <tr>
+												<td style=" padding-bottom: 10px">
+												  <p style="color: #404141">
+													<span style="font-weight: 700">Phone Number:</span>
+													<span>{{ mobile }}</span>
+												  </p>
+												</td>
+											  </tr>
+											  <tr>
+												<td style="height: 1px; background-color: #404141"></td>
+											  </tr>
+											</table>
+										  </td>
+										</tr>
+					  
+										<!-- TERTIARY EDUCTION -->
+										
+										<tr>
+										  <td
+											style="
+											  padding: 0;
+											  padding-bottom: 20px;
+											  background-color: white;
+											"
+										  >
+											<table
+											  width="100%"
+											  style="border-spacing: 0"
+											  role="presentation"
+											>
+											  <tr>
+												<td style=" padding-bottom: 10px">
+												  <p style="color: #404141">
+													<span style="font-weight: 700">Tertiary Education:</span>
+													<span>{{ tartiary_education }}</span>
+												  </p>
+												</td>
+											  </tr>
+											  <tr>
+												<td style="height: 1px; background-color: #404141"></td>
+											  </tr>
+											</table>
+										  </td>
+										</tr>
+										<!-- TERTIARY DATE -->
+										<tr>
+										  <td
+											style="
+											  padding: 0;
+											  padding-bottom: 20px;
+											  background-color: white;
+											"
+										  >
+											<table
+											  width="100%"
+											  style="border-spacing: 0"
+											  role="presentation"
+											>
+											  <tr>
+												<td style=" padding-bottom: 10px">
+												  <p style="color: #404141">
+													<span style="font-weight: 700">course of Study:</span>
+													<span>{{tartiary_studied}}</span>
+												  </p>
+												</td>
+											  </tr>
+											  <tr>
+												<td style="height: 1px; background-color: #404141"></td>
+											  </tr>
+											</table>
+										  </td>
+										</tr>
+
+										<!-- SECONDARY SCHOOL -->
+										<tr>
+											<td
+											  style="
+												padding: 0;
+												padding-bottom: 20px;
+												background-color: white;
+											  "
+											>
+											  <table
+												width="100%"
+												style="border-spacing: 0"
+												role="presentation"
+											  >
+												<tr>
+												  <td style=" padding-bottom: 10px">
+													<p style="color: #404141">
+													  <span style="font-weight: 700">Secondery School:</span>
+													  <span>{{secondary_sch}}</span>
+													</p>
+												  </td>
+												</tr>
+												<tr>
+												  <td style="height: 1px; background-color: #404141"></td>
+												</tr>
+											  </table>
+											</td>
+										  </tr>
+
+										  <!-- SECONDAY SCHOOL -->
+										<tr>
+											<td
+											  style="
+												padding: 0;
+												padding-bottom: 20px;
+												background-color: white;
+											  "
+											>
+											  <table
+												width="100%"
+												style="border-spacing: 0"
+												role="presentation"
+											  >
+												<tr>
+												  <td style=" padding-bottom: 10px">
+													<p style="color: #404141">
+													  <span style="font-weight: 700">Department:</span>
+													  <span>{{secondary_studied}}</span>
+													</p>
+												  </td>
+												</tr>
+												<tr>
+												  <td style="height: 1px; background-color: #404141"></td>
+												</tr>
+											  </table>
+											</td>
+										  </tr>
+
+										  <!-- TECHNOLOGIES INTERESTED -->
+										  <tr>
+											<td
+											  style="
+												padding: 0;
+												padding-bottom: 20px;
+												background-color: white;
+											  "
+											>
+											  <table
+												width="100%"
+												style="border-spacing: 0"
+												role="presentation"
+											  >
+												<tr>
+												  <td style=" padding-bottom: 10px">
+													<p style="color: #404141">
+													  <span style="font-weight: 700">Technologies:</span>
+													  <span>{{tech_interest}}</span>
+													</p>
+												  </td>
+												</tr>
+												<tr>
+												  <td style="height: 1px; background-color: #404141"></td>
+												</tr>
+											  </table>
+											</td>
+										  </tr>
+
+										  <!-- MORE ABOUT YOU  -->
+										  <tr>
+											<td
+											  style="
+												padding: 0;
+												padding-bottom: 60px;
+												background-color: white;
+											  "
+											>
+											  <table width="100%" style="border-spacing: 0" role="presentation">
+												<tr>
+												  <td style=" padding-bottom: 10px">
+													<p style="color: #404141">
+													  <span style="font-weight: 700">Remarks</span>
+													</p>
+												  </td>
+												</tr>
+												<tr>
+												  <td style="padding: 15px; border: 1px solid #404141">
+													<p style="color: #404141">
+													  {{remarks}}
+													</p>
+												  </td>
+												</tr>
+											  </table>
+											</td>
+										  </tr>
+
+
 								<tr>
 									<td style="text-align: start; padding-bottom: 25px">
 										<p
@@ -279,7 +541,10 @@ Anchorsoft Academy Short Quizzes
 										"
 									>
 										<a href="">
-											<img src="./Group 77.png" alt="" />
+											<img
+												src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+												alt=""
+											/>
 										</a>
 									</td>
 								</tr>
