--- a/templates/emails/virtual_class.html
+++ b/templates/emails/virtual_class.html
@@ -254,6 +254,150 @@ Interest in Virtual Class
 										</p>
 									</td>
 								</tr>
+
+									<!-- NAME -->
+				<tr>
+					<td
+					  style="
+						padding: 0;
+						padding-bottom: 20px;
+						background-color: white;
+					  "
+					>
+					  <table
+						width="100%"
+						style="border-spacing: 0"
+						role="presentation"
+					  >
+						<tr>
+						  <td style=" padding-bottom:10px">
+							<p style="color: #404141">
+							  <span style="font-weight: 700">Name:</span>
+							  <span>{{ full_name }}</span>
+							</p>
+						  </td>
+						</tr>
+						<tr>
+						  <td style="height: 1px; background-color: #404141"></td>
+						</tr>
+					  </table>
+					</td>
+				  </tr>
+				  <!-- EMAIL -->
+				  <tr>
+					<td
+					  style="
+						padding: 0;
+						padding-bottom: 20px;
+						background-color: white;
+					  "
+					>
+					  <table
+						width="100%"
+						style="border-spacing: 0"
+						role="presentation"
+					  >
+						<tr>
+						  <td style=" padding-bottom: 10px">
+							<p style="color: #404141">
+							  <span style="font-weight: 700">Email:</span>
+							  <span>{{ email }}</span>
+							</p>
+						  </td>
+						</tr>
+						<tr>
+						  <td style="height: 1px; background-color: #404141"></td>
+						</tr>
+					  </table>
+					</td>
+				  </tr>
+
+				  	  <!-- course -->
+						<tr>
+							<td
+							  style="
+								padding: 0;
+								padding-bottom: 20px;
+								background-color: white;
+							  "
+							>
+							  <table
+								width="100%"
+								style="border-spacing: 0"
+								role="presentation"
+							  >
+								<tr>
+								  <td style=" padding-bottom: 10px">
+									<p style="color: #404141">
+									  <span style="font-weight: 700">Course:</span>
+									  <span>{{ course }}</span>
+									</p>
+								  </td>
+								</tr>
+								<tr>
+								  <td style="height: 1px; background-color: #404141"></td>
+								</tr>
+							  </table>
+							</td>
+						  </tr>
+				  
+				  	<!-- PHONE NUMBER -->  
+				  <tr>
+					  <td
+						style="
+						  padding: 0;
+						  padding-bottom: 20px;
+						  background-color: white;
+						"
+					  >
+						<table
+						  width="100%"
+						  style="border-spacing: 0"
+						  role="presentation"
+						>
+						  <tr>
+							<td style=" padding-bottom: 10px">
+							  <p style="color: #404141">
+								<span style="font-weight: 700">Phone Number:</span>
+								<span>{{ mobile }}</span>
+							  </p>
+							</td>
+						  </tr>
+						  <tr>
+							<td style="height: 1px; background-color: #404141"></td>
+						  </tr>
+						</table>
+					  </td>
+					</tr>
+				
+					<!-- REMARKS -->
+					<tr>
+					  <td
+						style="
+						  padding: 0;
+						  padding-bottom: 60px;
+						  background-color: white;
+						"
+					  >
+						<table width="100%" style="border-spacing: 0" role="presentation">
+						  <tr>
+							<td style=" padding-bottom: 10px">
+							  <p style="color: #404141">
+								<span style="font-weight: 700">Remarks</span>
+							  </p>
+							</td>
+						  </tr>
+						  <tr>
+							<td style="padding: 15px; border: 1px solid #404141">
+							  <p style="color: #404141">
+								{{remarks}}
+							  </p>
+							</td>
+						  </tr>
+						</table>
+					  </td>
+					</tr>
+
 								<tr>
 									<td style="text-align: start; padding-bottom: 25px">
 										<p
@@ -279,7 +423,10 @@ Interest in Virtual Class
 										"
 									>
 										<a href="">
-											<img src="./Group 77.png" alt="" />
+											<img
+												src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+												alt=""
+											/>
 										</a>
 									</td>
 								</tr>
