--- a/templates/api/course_outline.html
+++ b/templates/api/course_outline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{course.title}}t</title>
     <head>
 <style>
     @page {
@@ -30,7 +30,7 @@
         Course Outline
     </h1></div>
 
-    {{course.course_outline}}
+    {{course.course_outline | safe }}
     <div id="footer_content">(c) - page <pdf:pagenumber>
         of <pdf:pagecount>
     </div>
