--- a/templates/emails/virtual_class.html
+++ b/templates/emails/virtual_class.html
@@ -1,5 +1,5 @@
 {% block subject %}
-Interest in Virtual Class    
+ Virtual Class - Anchorsoft Academy   
 {% endblock subject %}
 
 {% block html_body %}	
@@ -9,7 +9,7 @@ Interest in Virtual Class
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Interest in Virtual Class</title>
+		<title> Virtual Class - Anchorsoft Academy</title>
 		<style type="text/css">
 			table {
 				border-spacing: 0;
@@ -232,7 +232,7 @@ Interest in Virtual Class
 											style="font-size: 17px; color: #244d68; font-weight: 500"
 										>
 											We wanted to let you know that we have received your
-											interest in our virtual class on the course
+											interest in our <b>virtual class</b> on the course
 											<span style="font-weight: 700"
 												>{{course}}.</span
 											>
@@ -283,6 +283,65 @@ Interest in Virtual Class
 					  </table>
 					</td>
 				  </tr>
+				   	  <!-- course -->
+						 <tr>
+							<td
+							  style="
+								padding: 0;
+								padding-bottom: 20px;
+								background-color: white;
+							  "
+							>
+							  <table
+								width="100%"
+								style="border-spacing: 0"
+								role="presentation"
+							  >
+								<tr>
+								  <td style=" padding-bottom: 10px">
+									<p style="color: #404141">
+									  <span style="font-weight: 700">Course:</span>
+									  <span>{{ course }}</span>
+									</p>
+								  </td>
+								</tr>
+								<tr>
+								  <td style="height: 1px; background-color: #404141"></td>
+								</tr>
+							  </table>
+							</td>
+						  </tr>
+
+						  			  
+				  	<!-- PHONE NUMBER -->  
+				  <tr>
+					<td
+					  style="
+						padding: 0;
+						padding-bottom: 20px;
+						background-color: white;
+					  "
+					>
+					  <table
+						width="100%"
+						style="border-spacing: 0"
+						role="presentation"
+					  >
+						<tr>
+						  <td style=" padding-bottom: 10px">
+							<p style="color: #404141">
+							  <span style="font-weight: 700">Phone Number:</span>
+							  <span>{{ mobile }}</span>
+							</p>
+						  </td>
+						</tr>
+						<tr>
+						  <td style="height: 1px; background-color: #404141"></td>
+						</tr>
+					  </table>
+					</td>
+				  </tr>
+			  
 				  <!-- EMAIL -->
 				  <tr>
 					<td
@@ -312,64 +371,8 @@ Interest in Virtual Class
 					</td>
 				  </tr>
 
-				  	  <!-- course -->
-						<tr>
-							<td
-							  style="
-								padding: 0;
-								padding-bottom: 20px;
-								background-color: white;
-							  "
-							>
-							  <table
-								width="100%"
-								style="border-spacing: 0"
-								role="presentation"
-							  >
-								<tr>
-								  <td style=" padding-bottom: 10px">
-									<p style="color: #404141">
-									  <span style="font-weight: 700">Course:</span>
-									  <span>{{ course }}</span>
-									</p>
-								  </td>
-								</tr>
-								<tr>
-								  <td style="height: 1px; background-color: #404141"></td>
-								</tr>
-							  </table>
-							</td>
-						  </tr>
-				  
-				  	<!-- PHONE NUMBER -->  
-				  <tr>
-					  <td
-						style="
-						  padding: 0;
-						  padding-bottom: 20px;
-						  background-color: white;
-						"
-					  >
-						<table
-						  width="100%"
-						  style="border-spacing: 0"
-						  role="presentation"
-						>
-						  <tr>
-							<td style=" padding-bottom: 10px">
-							  <p style="color: #404141">
-								<span style="font-weight: 700">Phone Number:</span>
-								<span>{{ mobile }}</span>
-							  </p>
-							</td>
-						  </tr>
-						  <tr>
-							<td style="height: 1px; background-color: #404141"></td>
-						  </tr>
-						</table>
-					  </td>
-					</tr>
-				
+				 
+	
 					<!-- REMARKS -->
 					<tr>
 					  <td
