short quize email

--- a/templates/emails/kidscoding.html
+++ b/templates/emails/kidscoding.html
@@ -354,7 +354,7 @@ block html_body %}
 							<td style=" padding-bottom: 10px">
 							  <p style="color: #404141">
 								<span style="font-weight: 700">Phone Number:</span>
-								<span>{{ mobile }}</span>
+								<span><a href="tel:{{ mobile }}" style="color: #244d68; cursor: pointer; text-decoration: none;"></a>{{ mobile }}</span>
 							  </p>
 							</td>
 						  </tr>
