short quize emial delete

--- a/templates/emails/interested_emails.html
+++ b/templates/emails/interested_emails.html
@@ -116,7 +116,7 @@
 						mso-hide: all;
 					"
 				>
-				INTEREST IN FULLSTACK WEB DEVELOPMENT
+				INTEREST IN {{course}}
 				</div>
 
 				<table
