short quizze email changes to django email

--- a/templates/api/email_response/career_choice.html
+++ b/templates/api/email_response/career_choice.html
@@ -1,8 +1,4 @@
-{% block subject %} 
-Career Choice Advisory - Anchorsoft Academy 
-{% endblock subject %} 
-
-{% block html_body %}
+{% autoescape off %}
 <style type="text/css">
   table {
     border-spacing: 0;
@@ -546,4 +542,4 @@ Career Choice Advisory - Anchorsoft Academy
       </table>
     </div>
   </center>
-{% endblock html_body %}
+{% endautoescape %}
