student applications changes

--- a/templates/admin/api/user/change_list.html
+++ b/templates/admin/api/user/change_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <a href="uploads">Upload CSV </a>
+    <a href="">Upload CSV </a>
     {{ block.super }}
 {% endblock content %}
     
